--- a/HiemMauNhanDao/HiemMauNhanDao/Areas/Admin/Views/chiTietDHM/Edit.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Areas/Admin/Views/chiTietDHM/Edit.cshtml
@@ -10,51 +10,52 @@
 {
     @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
+<div class="form-horizontal">
 
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.IdChiTietDHM)
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    @Html.HiddenFor(model => model.IdChiTietDHM)
 
-        <div class="form-group">
-            <label>Tên đợt hiến máu</label>
-            <div class="col-md-10">
-                @Html.DropDownList("idDHM", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.idDHM, "", new { @class = "text-danger" })
-            </div>
+    <div class="form-group">
+        <label>Tên đợt hiến máu</label>
+        <div class="col-md-10">
+            @Html.DropDownList("IdDHM", ViewBag.idDHM as SelectList, htmlAttributes: new { @class = "form-control", @readonly = "readonly" })
+            @Html.ValidationMessageFor(model => model.idDHM, "", new { @class = "text-danger" })
         </div>
+    </div>
 
-        <div class="form-group">
-            <label>Tên đơn vị liên kết</label>
-            <div class="col-md-10">
-                @Html.DropDownList("idDVLK", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.idDVLK, "", new { @class = "text-danger" })
-            </div>
+    <div class="form-group">
+        <label>Tên đơn vị liên kết</label>
+        <div class="col-md-10">
+            @Html.DropDownList("IdDVLK", ViewBag.idDonVi as SelectList, htmlAttributes: new { @class = "form-control" })
+            @Html.ValidationMessageFor(model => model.idDVLK, "", new { @class = "text-danger" })
         </div>
+    </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.idBenhVien, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("idBenhVien", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.idBenhVien, "", new { @class = "text-danger" })
-            </div>
+    <div class="form-group">
+        <label>Tên Bệnh viện</label>
+        <div class="col-md-10">
+            @Html.DropDownList("IdBenhVien", ViewBag.idBenhVien as SelectList, htmlAttributes: new { @class = "form-control" })
+            @Html.ValidationMessageFor(model => model.idBenhVien, "", new { @class = "text-danger" })
         </div>
+    </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.trangThai, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <div class="checkbox">
-                    @Html.EditorFor(model => model.trangThai)
-                    @Html.ValidationMessageFor(model => model.trangThai, "", new { @class = "text-danger" })
-                </div>
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Lưu" class="btn btn-success" />
+    <div class="form-group">
+        @Html.LabelFor(model => model.trangThai, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            <div class="checkbox">
+                @Html.EditorFor(model => model.trangThai)
+                @Html.ValidationMessageFor(model => model.trangThai, "", new { @class = "text-danger" })
             </div>
         </div>
     </div>
+    @Html.HiddenFor(model => model.ngayDK, htmlAttributes: new { @class = "control-label col-md-2" })
+
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" value="Lưu" class="btn btn-success" />
+        </div>
+    </div>
+</div>
 }
 
 <div>
