--- a/HiemMauNhanDao/HiemMauNhanDao/Views/chiTietDHM/Index.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Views/chiTietDHM/Index.cshtml
@@ -20,12 +20,26 @@
         </div>
     </div>
 </section>
+<script>
+    $(function () {
+        $('#AlertBox').removeClass('hide');
+        $('#AlertBox').delay(5000).slideUp(500);
+    });
+</script>
 @using (Html.BeginForm("Index", "DKDHM", FormMethod.Get))
 {
     <section class="blog_area section_padding">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 mb-5 mb-lg-0">
+                    <div class="panel-body">
+                        @if (TempData["AlertMessage"] != null)
+                        {
+                            <div id="AlertBox" class="alert @TempData["AlertType"] hide">
+                                @TempData["AlertMessage"]
+                            </div>
+                        }
+                    </div>
                     <div class="blog_left_sidebar">
                         @foreach (var item in listDHM)
                         {
